hphp/hack/test/typecheck/deprecated_attr_bad_quotes.php.exp
File "deprecated_attr_bad_quotes.php", line 3, characters 16-34:
This attribute parameter should be single-quoted string (Typing[4127])
