hphp/hack/test/typecheck/deprecated_attr_bad_quotes.php
<?hh

<<__Deprecated("use bar() instead")>>
function f() {}
